codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Personality
  Choose a communication style for DeepSeekX.

  1. Default              No personality instructions.
  2. Friendly             Warm, collaborative, and helpful.
› 3. Pragmatic (current)  Concise, task-focused, and direct.

  Press enter to confirm or esc to go back
